<resources>
    <string name="app_name">CClean</string>
    <!--onboarding designs-->
    <string name="onboardingWelcomeContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboardingSpinWinContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboardingRecommenderContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboarding_welcome_3">Welcome 3</string>
    <string name="onboarding_welcome_2">Welcome 2</string>
    <string name="onboarding_welcome_1">Welcome</string>

    <string name="cancel" translatable="false">Cancel</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="text_hint" translatable="false"><b>Search Latest News...</b></string>

    <string name="signup_login_hint" translatable="false">Already have an account? Sign In</string>
    <string name="login_signup_hint" translatable="false">Don\'t have an account? Sign Up</string>

    <string name="or_sign_in_with" translatable="false">Join us with:</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Log In</string>
    <string name="forgot_password" translatable="false">Forgot password?</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="register">Register</string>
    <string name="register_details" translatable="false">Please register with Opus to continue</string>
    <string name="your_phone" translatable="false">Your Phone Number</string>
    <string name="your_email" translatable="false">Your Email</string>
    <string name="your_name" translatable="false">Your Name</string>
    <string name="set_password" translatable="false">Set Password</string>
    <string name="manage_profile" translatable="false">Manage Your Profile</string>
    <string name="update" translatable="false">Update</string>
    <string name="enter_registered_email" translatable="false">Please enter your registered email</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint" translatable="false">Password</string>
    <string name="error" translatable="false">Something appear</string>
    <string name="restart" translatable="false">Restart</string>
    <string name="menu">Menu</string>
    <string name="astuces">Astuces</string>
    <string name="accueil">Accueil</string>
    <string name="recherche">Recherche</string>
    <string name="profile">Profile</string>
    <string name="reviews">238 reviews</string>
    <string name="sub_title">473 Keeling Station</string>
    <string name="title">Wild Honey at Scotts Square</string>


    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>


    <!--about fragment-->
    <string name="project_info">This sample app implements MVVM architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvvm_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvvm_repo">2. https://github.com/MindorksOpenSource/android-mvvm-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="reservation">Reservation</string>

</resources>
