<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/avd_cut"
        android:title="@string/cut"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/avd_copy"
        android:title="@string/copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/avd_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/avd_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <group>
        <item
            android:id="@+id/navItemAbout"
            android:checked="true"
            android:icon="@drawable/ic_info_24px"
            android:title="@string/about" />
        <item
            android:id="@+id/navItemRateUs"
            android:checked="true"
            android:icon="@drawable/ic_star"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/navItemLogout"
            android:checked="true"
            android:icon="@drawable/ic_power_settings_new_24px"
            android:title="@string/logout" />
    </group>


</menu>